Fix spacing

--- a/src/plugins/weather/render/weather.css
+++ b/src/plugins/weather/render/weather.css
@@ -94,7 +94,7 @@
   text-align: center;
   align-content: end;
   position: relative;
-  height: 45%;
+  height: 50%;
 }
 
 .temperature-unit {
